// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login btn render correctly 1`] = `
<div
  data-test="loginButton"
>
  <button
    className="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1q39md6-MuiButtonBase-root-MuiButton-root"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <a
      href="https://github.com/login/oauth/authorize?scope=user&client_id=Iv1.a22e2f19afba852b&redirect_uri=http://localhost:3000/"
      style={
        Object {
          "color": "inherit",
          "textDecoration": "none",
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
      >
        Login with GitHub
      </p>
    </a>
  </button>
</div>
`;

exports[`Logout btn render correctly 1`] = `
<div
  data-test="loginButton"
>
  <li
    className="MuiMenuItem-root MuiMenuItem-gutters MuiButtonBase-root css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
    >
      Logout
    </p>
    <span
      className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </li>
</div>
`;
